--- a/lab/lab10/lab10.ipynb
+++ b/lab/lab10/lab10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cell-lab10-0",
    "metadata": {
     "deletable": false,
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cell-lab10-2",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cell-lab10-6",
    "metadata": {
     "deletable": false,
@@ -114,18 +114,32 @@
    },
    "outputs": [],
    "source": [
-    "probability_large_shiny = ..."
+    "probability_large_shiny = 4/13"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cell-lab10-7",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q2_0_1</pre></strong> passed! 🎉</p>"
+      ],
+      "text/plain": [
+       "q2_0_1 results: All test cases passed!"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q2_0_1\")"
    ]
@@ -140,10 +154,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cell-lab10-9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>surface</th> <th>size</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>large</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>large</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>large</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>large</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>dull   </td> <td>large</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>small</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>small</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>small</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>small</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>small</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>small</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>dull   </td> <td>small</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>dull   </td> <td>small</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "marbles = Table.read_table(\"marbles.csv\")\n",
     "marbles.show()"
@@ -159,10 +233,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cell-lab10-11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>size</th> <th>dull</th> <th>shiny</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>large</td> <td>1   </td> <td>4    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>small</td> <td>2   </td> <td>6    </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "size  | dull | shiny\n",
+       "large | 1    | 4\n",
+       "small | 2    | 6"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "marbles.pivot('surface', 'size')"
    ]
@@ -177,10 +281,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "cell-lab10-13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>surface</th> <th>size</th> <th>count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>dull   </td> <td>large</td> <td>1    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>dull   </td> <td>small</td> <td>2    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>large</td> <td>4    </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>shiny  </td> <td>small</td> <td>6    </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "surface | size  | count\n",
+       "dull    | large | 1\n",
+       "dull    | small | 2\n",
+       "shiny   | large | 4\n",
+       "shiny   | small | 6"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "marbles.group(['surface', 'size'])"
    ]
@@ -267,6 +409,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2784c5dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "surface | size  | count\n",
+      "dull    | large | 1\n",
+      "dull    | small | 2\n",
+      "shiny   | large | 4\n",
+      "shiny   | small | 6\n",
+      "('surface', 'size', 'count')\n",
+      "int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "grouped_marbles = marbles.group([\"surface\", \"size\"])\n",
+    "print(grouped_marbles)\n",
+    "print(grouped_marbles.labels)  # Xem tên cột\n",
+    "print(grouped_marbles.column(\"count\").dtype)  # Kiểm tra kiểu dữ liệu"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cell-lab10-16",
    "metadata": {},
@@ -276,15 +445,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "cell-lab10-17",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (4,) + inhomogeneous part.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 11\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Run this cell.\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# display_grouped_icon_array(marbles.group([\"surface\", \"size\"]), \"marble(s)\")\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# visualizations.display_combinations(marbles.group([\"surface\", \"size\"]), \"marble(s)\")\u001b[39;00m\n\u001b[0;32m      5\u001b[0m grouped_marbles_fixed \u001b[38;5;241m=\u001b[39m Table()\u001b[38;5;241m.\u001b[39mwith_columns(\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msurface\u001b[39m\u001b[38;5;124m\"\u001b[39m, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdull\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdull\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshiny\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshiny\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msize\u001b[39m\u001b[38;5;124m\"\u001b[39m, [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlarge\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msmall\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlarge\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msmall\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcount\u001b[39m\u001b[38;5;124m\"\u001b[39m, [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m6\u001b[39m]\n\u001b[0;32m      9\u001b[0m )\n\u001b[1;32m---> 11\u001b[0m \u001b[43mvisualizations\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdisplay_combinations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgrouped_marbles_fixed\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmarbles\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\admin\\Coding_journey\\data_science\\materials-sp22\\lab\\lab10\\visualizations.py:176\u001b[0m, in \u001b[0;36mdisplay_combinations\u001b[1;34m(category_counts, individuals_name)\u001b[0m\n\u001b[0;32m    175\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdisplay_combinations\u001b[39m(category_counts, individuals_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpeople\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m--> 176\u001b[0m     displays \u001b[38;5;241m=\u001b[39m \u001b[43mmake_displayed_rectangles\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcompute_combination_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcategory_counts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindividuals_name\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    177\u001b[0m     draw_plot(displays, individuals_name)\n",
+      "File \u001b[1;32mc:\\Users\\admin\\Coding_journey\\data_science\\materials-sp22\\lab\\lab10\\visualizations.py:140\u001b[0m, in \u001b[0;36mmake_displayed_rectangles\u001b[1;34m(combinations)\u001b[0m\n\u001b[0;32m    137\u001b[0m         rectangles\u001b[38;5;241m.\u001b[39mappend(rectangle_for_percentile(start_percentile, end_percentile, color))\n\u001b[0;32m    138\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m rectangles\n\u001b[1;32m--> 140\u001b[0m displays\u001b[38;5;241m.\u001b[39mappend_column(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrectangles\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mdisplays\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrectangles_for_percentage_range\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mstart amount\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mend amount\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolor\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m    142\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m displays\n",
+      "File \u001b[1;32mc:\\Users\\admin\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\datascience\\tables.py:536\u001b[0m, in \u001b[0;36mTable.apply\u001b[1;34m(self, fn, *column_or_columns)\u001b[0m\n\u001b[0;32m    534\u001b[0m     column_or_columns \u001b[38;5;241m=\u001b[39m column_or_columns[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    535\u001b[0m rows \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mselect(\u001b[38;5;241m*\u001b[39mcolumn_or_columns)\u001b[38;5;241m.\u001b[39mcolumns)\n\u001b[1;32m--> 536\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray([fn(\u001b[38;5;241m*\u001b[39mrow) \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m rows])\n",
+      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (4,) + inhomogeneous part."
+     ]
+    }
+   ],
    "source": [
     "# Run this cell.\n",
-    "display_grouped_icon_array(marbles.group([\"surface\", \"size\"]), \"marble(s)\")"
+    "# display_grouped_icon_array(marbles.group([\"surface\", \"size\"]), \"marble(s)\")\n",
+    "# visualizations.display_combinations(marbles.group([\"surface\", \"size\"]), \"marble(s)\")\n",
+    "\n",
+    "grouped_marbles_fixed = Table().with_columns(\n",
+    "    \"surface\", [\"dull\", \"dull\", \"shiny\", \"shiny\"],\n",
+    "    \"size\", [\"large\", \"small\", \"large\", \"small\"],\n",
+    "    \"count\", [1, 2, 4, 6]\n",
+    ")\n",
+    "\n",
+    "visualizations.display_combinations(grouped_marbles_fixed, \"marbles\")"
    ]
   },
   {
@@ -1082,7 +1275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.11.9"
   },
   "otter": {
    "OK_FORMAT": true,
